refactor: 优化 Stream 消费者并修复 AI 评分逻辑
  refactor: 优化 Stream 消费者并修复 AI 评分逻辑

  1. Stream 消费优化
     - RedisService 新增 streamConsumeMessages 方法，使用 Redis BLOCK 阻塞读取
     - 消除 IDEA "循环中 Thread.sleep() 忙等待" 警告
     - 三个 Consumer 简化 consumeLoop，减少约 40 行重复代码

  2. AI 评分逻辑修复
     - 提示词增加约束：无效回答（如"忘记了"、"不知道"）必须给 0 分
     - 让 AI 判断更灵活，能识别各种变体表达